--- a/front-end/src/components/post/post.module.scss
+++ b/front-end/src/components/post/post.module.scss
@@ -1,2 +1,76 @@
 @import "./../../scss_common/mixin";
 @import "./../../scss_common/grid.module.scss";
+$margin: 10px;
+
+.postContainer {
+    @include block_feed;
+
+    .post__top {
+        display: flex;
+        align-items: center;
+        .top__avatar {
+            @include avatar_small;
+            width: 48px;
+            height: 48px;
+            margin-right: 10px;
+        }
+        .top__input {
+            border: none;
+            font-size: 20px;
+            line-height: 30px;
+            flex: 1;
+            background-color: #ccc;
+            border-radius: 4px;
+            &:focus {
+                outline: none;
+            }
+        }
+    }
+    .post__preview {
+        margin-top: 10px;
+        background-size: cover;
+        background-attachment: fixed;
+        width: 100%;
+    }
+    .post__hr {
+        margin: 20px;
+    }
+    .post__bottom {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px 20px;
+        .bottom__list {
+            display: flex;
+            .bottom__item {
+                display: flex;
+                align-items: center;
+                margin-right: 10px;
+                cursor: pointer;
+                .item__icon {
+                    margin-right: 8px;
+                }
+                .item__title {
+                    text-transform: capitalize;
+                    font-weight: 500;
+                }
+            }
+        }
+
+        .bottom__post {
+            text-transform: capitalize;
+            border: none;
+            border-radius: 4px;
+            background-color: green;
+            font-weight: 600;
+            font-size: 20px;
+            color: white;
+            padding: 6px;
+
+            &:hover {
+                cursor: pointer;
+                box-shadow: 0 0 20px midnightblue;
+                scale: 1.1;
+            }
+        }
+    }
+}
