--- a/front-end/src/components/sidebar/sideBar.module.scss
+++ b/front-end/src/components/sidebar/sideBar.module.scss
@@ -1,2 +1,69 @@
 @import "./../../scss_common/mixin";
 @import "./../../scss_common/grid.module.scss";
+$margin: 10px;
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgb(179, 179, 179);
+}
+.sideBarContainer {
+    height: 100vh;
+    overflow-y: scroll;
+    position: sticky;
+    top: $topBar-height;
+    .sideBar__list {
+        .sideBar__item {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            margin: $margin;
+            &:hover {
+                text-decoration: underline;
+                color: green;
+                scale: 1.05;
+            }
+            .item__icon {
+                padding-right: 10px;
+            }
+            .item__title {
+                text-transform: capitalize;
+            }
+        }
+    }
+
+    .sideBar__showMore {
+        margin: $margin;
+        padding: 10px;
+        text-transform: capitalize;
+        background-color: #fff;
+        letter-spacing: 1.5px;
+        font-weight: 600;
+        width: 100px;
+        border-radius: 2px;
+        background-color: #ccc;
+        opacity: 0.8;
+
+        &:hover {
+            animation: hover 0.3s linear forwards;
+        }
+        @keyframes hover {
+            from {
+            }
+            to {
+                opacity: 1;
+                cursor: pointer;
+                box-shadow: 0 0 10px $shadow-color, 0 0 20px $shadow-color, 0 0 40px $shadow-color;
+            }
+        }
+    }
+    .sideBar__hr {
+        margin: 0 $margin;
+    }
+    .sideBar__friendList {
+    }
+}
