update profile Page

--- a/front-end/src/components/wall/wall.module.scss
+++ b/front-end/src/components/wall/wall.module.scss
@@ -15,6 +15,7 @@
                 @include avatar_small;
                 margin-right: 10px;
                 cursor: pointer;
+                box-shadow: 0 0 10px green;
             }
             .left__name {
                 margin-right: 10px;
