--- a/front-end/src/pages/login/login.module.scss
+++ b/front-end/src/pages/login/login.module.scss
@@ -57,6 +57,7 @@
                 }
             }
             .right__input__signIn {
+                margin: 10px 40px;
                 background-color: #42b72a;
                 color: white;
                 border-radius: 4px;
