--- a/front-end/src/components/post/post.module.scss
+++ b/front-end/src/components/post/post.module.scss
@@ -8,6 +8,7 @@ $margin: 10px;
     .post__top {
         display: flex;
         align-items: center;
+
         .top__avatar {
             @include avatar_small;
             width: 48px;
@@ -25,6 +26,17 @@ $margin: 10px;
                 outline: none;
             }
         }
+    }
+    .post__img {
+        position: relative;
+    }
+    .post__CancelImg {
+        position: absolute;
+        top: 10px;
+        right: 0;
+        cursor: pointer;
+        color: yellow;
+        font-size: 40px;
     }
     .post__preview {
         margin-top: 10px;
